# extended-logging

./: Pipfile  README.md  pyproject.toml
src/extended_logging/: const.py  extended_logging.py
